fix: pubspec.yaml

--- a/web/index.html
+++ b/web/index.html
@@ -32,10 +32,10 @@
   <title>web_page</title>
   <link rel="manifest" href="manifest.json">
 
-  <!-- <script>
+  <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
-  </script> -->
+    var flutter_service_worker_version = null;
+  </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
